# AsulCFGManager

./: .gitignore  AsulCFGManager.cpp  AsulCFGManager.h  BaseInclude.h  BaseScrollpage.cpp  BaseScrollpage.h  CMakeLists.txt  FluentCSRM.pro  FluentCSRM.pro.user.5eb0521  FluentHiper.cpp  FluentHiper.h  Makefile  Makefile.Debug  Makefile.Release  README.md  Resource.qrc  T_Deploy.cpp  T_Deploy.h  T_FormatHelp.cpp  T_FormatHelp.h  T_Home.cpp  T_Home.h  formatHelp.md  main.cpp
.github/workflows/: ci.yml  main.yml
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: AsulCFGManager.cpp.C1E26D42AD42144D.idx  AsulCFGManager.h.7F164A49C0308179.idx  BaseInclude.h.C1A3E1942E511BA9.idx  BaseScrollpage.cpp.0FC4EE9BCE83B8BA.idx  BaseScrollpage.h.CC7F87C9B40B92C4.idx  Def.h.894692D26E54C137.idx  ElaAcrylicUrlCard.h.D88D049137A5A9A2.idx  ElaAppBar.h.2DD842E7CEB4CE05.idx  ElaApplication.h.53B78042977AF5B0.idx  ElaComboBox.h.FABEF1DEFE29C1E3.idx  ElaContentDialog.h.E62C05EE4424B27D.idx  ElaFlowLayout.h.D55EA51B403CADE8.idx  ElaKeyBinder.h.7CB61FE7C3CA3C55.idx  ElaLineEdit.h.6069613794B98F0E.idx  ElaMenu.h.4D0DED48265152E1.idx  ElaMessageButton.h.64D30911763D4691.idx  ElaNavigationRouter.h.ABC65E320AD99F14.idx  ElaPlainTextEdit.h.E3BAB7AB7736EA26.idx  ElaPopularCard.h.1F9B3459C30104ED.idx  ElaProgressBar.h.1EE184AF0E87E5F3.idx  ElaPushButton.h.D5D9C425390D430B.idx  ElaScrollArea.h.8570E33B990BD02A.idx  ElaScrollPage.h.2F95E48A859F25C2.idx  ElaScrollPageArea.h.00219D3994008868.idx  (+55 more)
Headers/: BaseInclude.h  BaseScrollpage.h  F_Collector.h  F_SteamAvatarFetcher.h  F_SteamUserQuery.h  GlobalSettings.h  T_CFGSettings.h  T_Deploy.h  T_FormatHelp.h  T_Home.h  T_Home2.h  T_Manage.h  T_Setting.h  T_UserSetting.h  W_SCFGTransformer.h
Md/: formatHelp.md
Sources/: AsulWindow.cpp  BanElaComboBox.cpp  BaseScrollpage.cpp  F_Collector.cpp  F_SteamAvatarFetcher.cpp  F_SteamUserQuery.cpp  F_Translator.cpp  GlobalSettings.cpp  T_About.cpp  T_BasePage.cpp  T_CFGSettings.cpp  T_Deploy.cpp  T_FormatHelp.cpp  T_Home.cpp  T_Home2.cpp  T_Manage.cpp  T_Setting.cpp  T_SplashScreen.cpp  T_UserSetting.cpp  W_DragFrame.cpp  W_SCFGTransformer.cpp  newT_Deploy.cpp
Uac/: res.rc
debug/: object_script.FluentCSRM.Debug
install/include/: ElaNavigationBar.h  ElaSuggestBox.h  ElaWindow.h
release/: moc_AsulCFGManager.cpp  moc_BaseScrollpage.cpp  moc_F_Collector.cpp  moc_T_Deploy.cpp  moc_T_FormatHelp.cpp  moc_T_Home.cpp  moc_T_Setting.cpp  moc_W_DragFrame.cpp  object_script.FluentCSRM.Release
translations/: AM_en_US.ts  AM_zh_CN.ts
